# ai-agents-handson

./: .gitignore  README.md
.devcontainer/: .env.example  Dockerfile  compose.yaml  devcontainer.json  pyproject.toml
.devcontainer/.postgres/: init.sh
.devcontainer/.toolbox/: Dockerfile  tools.yaml
01-basics/: 01-llm.py  02-tool-functions.py  03-tool-externals.py  README.md
01-basics/libs/: __init__.py  config.py
01-basics/tools/: __init__.py  apis.py  calculator.py  database.py
02-agent/: README.md
02-agent/01/: agent.py
02-agent/02/: agent.py
02-agent/02/libs/: config.py
02-agent/02/tools/: __init__.py  apis.py  database.py
02-agent/03/: agent.py
02-agent/04/: agent.py  callbacks.py
02-agent/04/tools/: __init__.py  apis.py
02-agent/05/: agent.py  test_001.evalset.json
02-agent/05/tools/: __init__.py  calculator.py
03-agents/: README.md
03-agents/01/: agent.py
03-agents/02/: agent.py  callbacks.py
03-agents/02/libs/: artifact.py  config.py  memory.py  session.py
03-agents/02/plugins/: counter.py  logger.py  validate.py
03-agents/02/tools/: __init__.py
03-agents/03/calculator/: agent.py  requirements.txt
03-agents/03/calculator/tools/: calculator.py
03-agents/03/calculator_a2a/: __main__.py  agent.py  pyproject.toml
03-agents/03/calculator_a2a/tools/: __init__.py
03-agents/04/: agent.py  libs.py
04-memory/: 01-history.py  02-summarized-history.py  03-embeddings.py  04-rag.py  05-tokenizer.py  06-graph-rag.py  README.md
