[project]
name = "AI-Agents"
version = "0.1.0"
description = "AI-Agents hands-on material"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "asyncpg>=0.30.0",
    "faiss-cpu>=1.12.0",
    "google-adk[a2a,eval]>=1.16.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.121.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-litellm>=0.2.3",
    "llama-index>=0.14.5",
    "mcp>=1.18.0",
    "neo4j>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "toolbox-core>=0.5.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
